# CS5351-acj

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  flake.nix  main.tex  pyproject.toml  referencias.bib  requirements.txt  tesisutec.cls
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 8ac7jmv46zvd3c85cfx2bfyhacm2zqqm-source  x2jabjj6344msvf2rj452hpbfd4h5mwl-source
.github/workflows/: test-boost.yml  wheels.yml
encabezados/: dedicatoria.tex
examples/: example_minkowski_osm.py  example_multimodal_evaluation.py
images/: disolucion_espacial_plot.py
scripts/: run_benchmark.py
secciones/: apendice5_documentacion.tex  capitulo_contribucion_1.tex  capitulo_contribucion_2.tex  capitulo_contribucion_3.tex  capitulo_definicion_problema.tex  capitulo_discusion_resultados.tex  capitulo_fundamentos_teoricos.tex  capitulo_pruebas_resultados.tex  capitulo_trabajo_futuro.tex  capitulo_trabajos_relacionados.tex  resumen.tex
src/acj/: __init__.py  map_index.py
src/acj/algorithms/: graph.py  map_index.py  minkowski.py
src/acj/core/: CMakeLists.txt  __init__.py  network.py  semantics.py
src/acj/core/src/: acj_core.cpp  bindings.cpp  graph_simplify.cpp  graph_simplify.hpp  spatial_index.cpp  spatial_index.hpp  types.hpp
src/acj/data/: io.py
src/acj/evaluation/: base.py  evaluators.py  metrics.py  reporting.py
src/acj/utils/: render.py
tests/: conftest.py  test_acj.py  test_core_engine.py  test_data.py  test_evaluation.py  test_integration.py  test_network.py  test_parsers.py  test_semantics.py  test_simplification.py  test_spatial_index.py
