[build-system]
requires = ["scikit-build-core>=0.5.0", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "acj"
version = "0.1.0"
description = "Simplificacion de grafos urbanos y analisis de criminalidad"
authors = [
    { name="Alejandro", email="alejandro.calizaya@utec.edu.pe" },
    { name="Cesar", email="cesar.perales@utec.edu.pe" },
    { name="Jerimy", email="jerimy.sandoval@utec.edu.pe" }
]
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pandas",
    "networkx",
    "geopandas",
    "osmnx"
]

[project.optional-dependencies]
viz = ["vispy", "PyQt5"]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.scikit-build]
wheel.packages = ["src/acj"]
