[build-system]
requires = ["scikit-build-core>=0.5.0", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "acj"
version = "0.1.2"
description = "Simplificacion de grafos urbanos y analisis de criminalidad"
readme = "README.md"
authors = [
    { name="Alejandro Calizaya", email="alejandro.calizaya@utec.edu.pe" },
    { name="Cesar Perales", email="cesar.perales@utec.edu.pe" },
    { name="Jerimy Sandoval", email="jerimi8462@gmail.com" }
]
requires-python = ">=3.10"

dependencies = [
    "numpy",
    "pandas",
    "networkx",
    "geopandas",
    "osmnx"
]

[project.optional-dependencies]
viz = ["vispy", "PyQt5"]
test = ["pytest"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.scikit-build]
wheel.packages = ["src/acj"]
